<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    style="@style/CategoryStyle">

    <!-- Item entry -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/item_entry"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Product Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_price"
                android:hint="@string/hint_price"
                android:inputType="number"
                style="@style/EditorFieldStyle" />


            <!-- Quantity -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Less button -->
                <ImageButton
                    android:id="@+id/edit_lessen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/less"
                    android:src="@drawable/ic_less" />

                <!-- Quantity field -->
                <EditText
                    android:id="@+id/edit_quantity"
                    android:hint="@string/hint_quantity"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    style="@style/EditorFieldStyle" />

                <!-- More button -->
                <ImageButton
                    android:id="@+id/edit_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/more"
                    android:src="@drawable/ic_more" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- Supplier entry -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/supplier"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Supplier Name field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <!-- Supplier Phone -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Supplier Phone field -->
                <EditText
                    android:id="@+id/edit_supplier_number"
                    android:hint="@string/hint_supplier_number"
                    android:inputType="phone"
                    style="@style/EditorFieldStyle" />

                <!-- More button -->
                <ImageButton
                    android:id="@+id/edit_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/phone"
                    android:src="@drawable/ic_phone" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
